Fix spacing so table does not have scroll bar

--- a/src/main/angular/member-coverage-forms-app/src/styles.css
+++ b/src/main/angular/member-coverage-forms-app/src/styles.css
@@ -73,6 +73,7 @@ body {
   width: 75px;
   margin: auto;
   display: block;
+  height: 47px;
 }
 
 select {
